# gowin_cortexm1_fw

./: .cproject  .project  CMakeLists.txt  README.md
Debug/: makefile  softcore_fw_example.elf  softcore_fw_example.map  sources.mk
Debug/PERIPHERAL/src/: GOWIN_M1_can.d  GOWIN_M1_ddr3.d  GOWIN_M1_dualtimer.d  GOWIN_M1_ethernet.d  GOWIN_M1_gpio.d  GOWIN_M1_i2c.d  GOWIN_M1_misc.d  GOWIN_M1_psram.d  GOWIN_M1_qspi_flash.d  GOWIN_M1_rtc.d  GOWIN_M1_sdcard.d  GOWIN_M1_spi.d  GOWIN_M1_spi_flash.d  GOWIN_M1_timer.d  GOWIN_M1_trng.d  GOWIN_M1_uart.d  GOWIN_M1_wdog.d  subdir.mk
Debug/STARTUP/: subdir.mk
Debug/SYSTEM/: subdir.mk  system_GOWIN_M1.d
Debug/USER/: GOWIN_M1_it.d  delay.d  gpio.d  main.d  subdir.mk
PERIPHERAL/src/: GOWIN_M1_can.c  GOWIN_M1_ddr3.c  GOWIN_M1_dualtimer.c  GOWIN_M1_ethernet.c  GOWIN_M1_gpio.c  GOWIN_M1_i2c.c  GOWIN_M1_misc.c  GOWIN_M1_psram.c  GOWIN_M1_qspi_flash.c  GOWIN_M1_rtc.c  GOWIN_M1_sdcard.c  GOWIN_M1_spi.c  GOWIN_M1_spi_flash.c  GOWIN_M1_timer.c  GOWIN_M1_trng.c  GOWIN_M1_uart.c  GOWIN_M1_wdog.c
bootloader/: CMakeLists.txt  README.md  boot.c
bsp/gowin/startup/: startup_GOWIN_M1.S
bsp/gowin/startup/linker/: GOWIN_M1_flash_burn.ld
bsp/system/: GOWIN_M1.h  GOWIN_M1_it.c
cheby/: soc_regs.h  sysinfo_regs.h
include/: delay.h  gpio.h  sys_defs.h
itcm/: CMakeLists.txt  boot.c
itcm/boot/: itcm0  itcm1  itcm2  itcm3
itcm/mem_files/: itcm0  itcm1  itcm2  itcm3
kernel/: kernel.c  kernel.h  pendsv.S
scripts/: size_summary.sh
src/: GOWIN_M1_it.c  GOWIN_M1_it.h  ddr3_demo.c  debug.c  debug.h  delay.c  delay.h  ethernet_demo.c  gpio.c  gpio.h  gpio_ffc_demo.c  hw.c  hw.h  main.c  multiflex_demo.c  os_demo.c  sfp_demo.c
src/multiflex/: mfx.c  mfx.h
src/networking/: arp.c  arp.h  icmp.c  icmp.h  ipv4.c  ipv4.h  mac.c  mac.h  net_defs.h  phy.c  phy.h  udp.c  udp.h
tools/: udp_test_sender.py
